# zmedia

./: .gitignore  README.md  build.gradle  build.gradle.bak
docs/: build_1.0.0.sh  build_1.1.0.sh  build_1.2.0.sh  codecs.txt  decoders.txt  demuxers.txt  encoders.txt  muxers.txt
ffmpeg-android-maker/: README.md  build.sh  ffmpeg-android-maker.sh
ffmpeg-android-maker/scripts/: export-host-variables.sh
ffmpeg-android-maker/scripts/ffmpeg/: build.sh
ffmpeg-maker/: README.md  build.sh  ffmpeg-android-maker.sh  ffmpeg-iOS-maker.sh  ffmpeg-maker.sh
ffmpeg-maker/scripts/: check-host-machine.sh  export-build-variables.sh  export-host-variables.sh  parse-arguments.sh
ffmpeg-maker/scripts/ffmpeg/: build-android.sh  build-iOS.sh
ffmpeg-maker/scripts/libaom/: android.cmake  build.sh
ffmpeg-maker/scripts/libdav1d/: build.sh
ffmpeg-maker/scripts/libmp3lame/: build.sh  download.sh
ffmpeg-maker/scripts/libopenssl/: build.sh  download.sh
ffmpeg-maker/scripts/libspeex/: build.sh
ffmpeg-maker/scripts/libvpx/: build.sh
ffmpeg-maker/scripts/libwavpack/: build.sh
ffmpeg-maker/scripts/libx264/: build.sh  download.sh
src/androidTest/java/cn/com/lasong/base/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/mux/: muxer.c  muxer.h  muxing.c  muxing.h
src/main/cpp/resample/: resample.c  resample.h  resample_helper.c  resample_helper.h
src/main/cpp/speexdst/: arch.h  resample.c
src/main/cpp/util/: helper.h
src/main/java/cn/com/lasong/media/: Muxer.java  (+9 more)
src/main/jniLibs/includes/libavutil/: ffversion.h
(+6 files in other folders)
